@@ -1,3 +1,8 @@
+2006-10-29 Richard Frith-Macdonald <rfm@gnu.org>
+
+	* Source/xlib/XGFont.m: Use encodingFromCharset (undeprecated and
+	handles more cases than GSEncodingForRegistry)
+
 2006-10-28  Adam Fedor  <fedor@gnu.org>
 
 	* back.make.in: Use correct flags;
